// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle test  * should render with labels 1`] = `
.c1 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Ubuntu,"Helvetica Neue",sans-serif;
  font-style: normal;
  font-size: 14px;
  line-height: 20px;
  font-weight: normal;
  color: #536775;
  text-transform: none;
}

.c3 {
  display: block;
  box-sizing: border-box;
  width: 40px;
  height: 20px;
}

.c5 {
  display: none;
}

.c6 {
  box-sizing: border-box;
  width: 40px;
  height: 20px;
  background: #FFFFFF;
  border: 1px solid #8F9EAA;
  border-radius: 100px;
  transition: all 150ms;
  display: block;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  flex-shrink: 0;
  align-self: flex-start;
  cursor: pointer;
  pointer-events: auto;
}

.c6:after {
  display: block;
  position: absolute;
  content: "";
  width: 16px;
  height: 16px;
  border-radius: 50%;
  left: 5%;
  top: 50%;
  transform: translateY(-50%);
  transition: left 0.2s ease;
  background-color: #35414A;
}

.c4:focus+.c6 {
  border-color: #35414A;
  box-shadow: 0 0 0 1px #35414A;
}

.c0 {
  position: relative;
  cursor: pointer;
  display: flex;
  flex-flow: row nowrap;
  align-items: center;
}

.c2 {
  margin-right: 8px;
}

.c7 {
  margin-left: 8px;
}

<div>
  <label
    class="c0"
  >
    <span
      class="c1 c2"
    >
      Dark theme
    </span>
    <div
      class="c3"
    >
      <input
        class="c4 c5"
        type="checkbox"
      />
      <div
        class="c6"
        role="switch"
      />
    </div>
    <span
      class="c1 c7"
    >
      Light theme
    </span>
  </label>
</div>
`;

exports[`Toggle test  * should render with required props 1`] = `
.c1 {
  display: block;
  box-sizing: border-box;
  width: 40px;
  height: 20px;
}

.c3 {
  display: none;
}

.c4 {
  box-sizing: border-box;
  width: 40px;
  height: 20px;
  background: #FFFFFF;
  border: 1px solid #8F9EAA;
  border-radius: 100px;
  transition: all 150ms;
  display: block;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  flex-shrink: 0;
  align-self: flex-start;
  cursor: pointer;
  pointer-events: auto;
}

.c4:after {
  display: block;
  position: absolute;
  content: "";
  width: 16px;
  height: 16px;
  border-radius: 50%;
  left: 5%;
  top: 50%;
  transform: translateY(-50%);
  transition: left 0.2s ease;
  background-color: #35414A;
}

.c2:focus+.c4 {
  border-color: #35414A;
  box-shadow: 0 0 0 1px #35414A;
}

.c0 {
  position: relative;
  cursor: pointer;
  display: flex;
  flex-flow: row nowrap;
  align-items: center;
}

<div>
  <label
    class="c0"
  >
    <div
      class="c1"
    >
      <input
        class="c2 c3"
        type="checkbox"
      />
      <div
        class="c4"
        role="switch"
      />
    </div>
  </label>
</div>
`;
